# ai_news_crew

./: README.md  docker-compose.yml  otel-collector-config.yaml  pyproject.toml  report.md  streamlit_app.py
cline-docs/: openlit-development-plan.md  ui-development-plan.md
src/ai_news_crew/: crew.py  main.py
tests/: test_openlit_integration.py  test_performance_benchmarks.py  test_streamlit_app.py
