[project]
name = "ai_news_crew"
version = "0.1.0"
description = "ai-news-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.126.0,<1.0.0",
    "streamlit>=1.45.1",
    "pytest>=8.0.0"
]

[project.scripts]
ai_news_crew = "ai_news_crew.main:run"
run_crew = "ai_news_crew.main:run"
train = "ai_news_crew.main:train"
replay = "ai_news_crew.main:replay"
test = "ai_news_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]
